src/objects/NVMStatsSF__NVM_Call_Segment__c.object
<CustomObject>
    <fields>
        <fullName>ACW_Time_Hours__c</fullName>
        <formula>NVMStatsSF__ACW_Time__c  / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACW Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACW_Time_Minutes__c</fullName>
        <formula>NVMStatsSF__ACW_Time__c  / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACW Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Hold_Time_Hours__c</fullName>
        <formula>NVMStatsSF__Agent_Held_Time__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Hold Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Hold_Time_Minutes__c</fullName>
        <formula>NVMStatsSF__Agent_Held_Time__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Hold Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Talk_Time_Hours__c</fullName>
        <formula>NVMStatsSF__AgentTalk_TIme__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Talk Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Talk_Time_Minutes__c</fullName>
        <formula>NVMStatsSF__AgentTalk_TIme__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Talk Time Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__ACW_Time__c</fullName>
        <label>ACW Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__AgentTalk_TIme__c</fullName>
        <label>AgentTalk TIme</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent_Held_Time__c</fullName>
        <label>Agent Hold Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent_ID__c</fullName>
        <label>Agent ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NVM_Call_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Contributing_Events__c</fullName>
        <label>Contributing Events</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Day_of_Week__c</fullName>
        <formula>CASE(MOD( NVMStatsSF__Date__c - DATE(1900, 1, 7), 7), 
1, &apos;1-Monday&apos;, 
2, &apos;2-Tuesday&apos;, 
3, &apos;3-Wednesday&apos;, 
4, &apos;4-Thursday&apos;, 
5, &apos;5-Friday&apos;, 
6, &apos;6-Saturday&apos;, 
7, &apos;7-Sunday&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Fiscal_Quarter__c</fullName>
        <formula>CASE(MONTH( NVMStatsSF__Date__c ) , 
1, &quot;Q1-&quot;+ TEXT(year( NVMStatsSF__Date__c )), 
2, &quot;Q1-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
3, &quot;Q1-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
4, &quot;Q2-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
5, &quot;Q2-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
6, &quot;Q2-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
7, &quot;Q3-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
8, &quot;Q3-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
9, &quot;Q3-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
10, &quot;Q4-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
11, &quot;Q4-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
12, &quot;Q4-&quot;+ TEXT(year(NVMStatsSF__Date__c)), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Month_of_Year__c</fullName>
        <formula>CASE(MONTH( NVMStatsSF__Date__c ) , 
1, &quot;(1) Jan&quot;, 
2, &quot;(2) Feb&quot;, 
3, &quot;(3) Mar&quot;, 
4, &quot;(4) Apr&quot;, 
5, &quot;(5) May&quot;, 
6, &quot;(6) Jun&quot;, 
7, &quot;(7) Jul&quot;, 
8, &quot;(8) Aug&quot;, 
9, &quot;(9) Sep&quot;, 
10, &quot;(10) Oct&quot;, 
11, &quot;(11) Nov&quot;, 
12, &quot;(12) Dec&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month of Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__NVM_Call_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NVM Call Summary</label>
        <referenceTo>NVMStatsSF__NVM_Call_Summary__c</referenceTo>
        <relationshipLabel>NVM Call Segments</relationshipLabel>
        <relationshipName>NVM_Call_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Numeric_Week_of_Year__c</fullName>
        <formula>VALUE( NVMStatsSF__Week_of_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Week of Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Queue_Duration__c</fullName>
        <label>Queue Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Seg_Transition_Reason__c</fullName>
        <label>Seg Transition Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Segment_End_Time__c</fullName>
        <label>Segment End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Segment_Sequence__c</fullName>
        <label>Segment Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Segment_Start_Time__c</fullName>
        <label>Segment Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Week_of_Year__c</fullName>
        <formula>TEXT(MOD(FLOOR( ( NVMStatsSF__Date__c  - DATE(2006,01,01))/7),52)+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week of Year</label>
        <type>Text</type>
    </fields>
    <label>NVM Call Segment</label>
    <listViews>
        <fullName>NVMStatsSF__All</fullName>
        <columns>NAME</columns>
        <columns>NVMStatsSF__Segment_Start_Time__c</columns>
        <columns>NVMStatsSF__Queue_Duration__c</columns>
        <columns>NVMStatsSF__Queue_Name__c</columns>
        <columns>NVMStatsSF__Segment_End_Time__c</columns>
        <columns>NVMStatsSF__Segment_Sequence__c</columns>
        <columns>NVMStatsSF__Seg_Transition_Reason__c</columns>
        <columns>NVMStatsSF__Contributing_Events__c</columns>
        <columns>NVMStatsSF__Agent__c</columns>
        <columns>NVMStatsSF__AgentTalk_TIme__c</columns>
        <columns>NVMStatsSF__Agent_Held_Time__c</columns>
        <columns>NVMStatsSF__ACW_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000000000}</displayFormat>
        <label>NVM Call Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Call Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>